NetBSD Problem Report #44302

From www@NetBSD.org  Fri Dec 31 18:21:59 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 8850163BA81
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 31 Dec 2010 18:21:59 +0000 (UTC)
Message-Id: <20101231182159.6AF4463B8B4@www.NetBSD.org>
Date: Fri, 31 Dec 2010 18:21:59 +0000 (UTC)
From: pooka@iki.fi
Reply-To: pooka@iki.fi
To: gnats-bugs@NetBSD.org
Subject: sysvbfs allows unlink on fs mounted MNT_RDONLY
X-Send-Pr-Version: www-1.0

>Number:         44302
>Category:       kern
>Synopsis:       sysvbfs allows unlink on fs mounted MNT_RDONLY
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    njoly
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Dec 31 18:25:01 +0000 2010
>Closed-Date:    Mon Jan 31 18:59:43 +0000 2011
>Last-Modified:  Mon Jan 31 18:59:43 +0000 2011
>Originator:     Antti Kantee
>Release:        
>Organization:
>Environment:
>Description:
see summary
>How-To-Repeat:
tests/fs/vfs/t_ro sysvbfs_rmfile
>Fix:

>Release-Note:

>Audit-Trail:
From: "Antti Kantee" <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44302 CVS commit: src/tests/fs/vfs
Date: Fri, 31 Dec 2010 18:26:25 +0000

 Module Name:	src
 Committed By:	pooka
 Date:		Fri Dec 31 18:26:25 UTC 2010

 Modified Files:
 	src/tests/fs/vfs: t_ro.c

 Log Message:
 fill in PR kern/44302


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/tests/fs/vfs/t_ro.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: kern-bug-people->njoly
Responsible-Changed-By: njoly@NetBSD.org
Responsible-Changed-When: Mon, 31 Jan 2011 18:44:48 +0000
Responsible-Changed-Why:
take


From: "Nicolas Joly" <njoly@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44302 CVS commit: src/sys/fs/sysvbfs
Date: Mon, 31 Jan 2011 18:48:51 +0000

 Module Name:	src
 Committed By:	njoly
 Date:		Mon Jan 31 18:48:50 UTC 2011

 Modified Files:
 	src/sys/fs/sysvbfs: sysvbfs_vnops.c

 Log Message:
 In sysvbfs_lookup(), deny last component write operation on a
 read-only mount.
 Fix PR/44302: sysvbfs allows unlink on fs mounted MNT_RDONLY.

 Reviewed by pooka.


 To generate a diff of this commit:
 cvs rdiff -u -r1.35 -r1.36 src/sys/fs/sysvbfs/sysvbfs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Nicolas Joly" <njoly@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/44302 CVS commit: src/tests/fs/vfs
Date: Mon, 31 Jan 2011 18:53:30 +0000

 Module Name:	src
 Committed By:	njoly
 Date:		Mon Jan 31 18:53:29 UTC 2011

 Modified Files:
 	src/tests/fs/vfs: t_ro.c

 Log Message:
 Now that PR/44302 is fixed, fs/vfs/t_ro:sysvbfs_rmfile should not fail
 anymore.


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/tests/fs/vfs/t_ro.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: njoly@NetBSD.org
State-Changed-When: Mon, 31 Jan 2011 18:59:43 +0000
State-Changed-Why:
Fixed. Thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.