In sysvbfs_lookup(), deny last component write operation on a read-only mount. Fix PR/44302: sysvbfs allows unlink on fs mounted MNT_RDONLY.

Reviewed by pooka.